[tool.poetry]
name = "primarilink-serveur"
version = "0.1.0"
description = "It will make possible of linking with different servers by it's pin code"
authors = ["Code Commun"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "primarilink_serveur"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.4"
django-browser-reload = "1.11.0"
Markdown = "3.4.4"
ipdb = "0.13.13"
cryptography = "41.0.4"
djangorestframework = "^3.14.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
