[tool.poetry]
name = "primarilink-serveur"
version = "0.1.0"
description = "It will make possible of linking with different servers by it's pin code"
authors = ["Code Commun"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "primarilink_serveur"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.4"
django-browser-reload = "1.11.0"
ipdb = "0.13.13"
ipython = "8.11.0"
Markdown = "3.4.4"
cryptography = "41.0.4"
djangorestframework = "^3.14.0"
requests = "^2.31.0"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
